# openFire

./: .gitignore  CMakeLists.txt  LICENSE  README.md  changelog.txt  game snippet.c  makefile  map legenda.txt  of  of.info  release.bat
data/: amidb16.plt  crosshair.bm  explosion.bm  explosion.msk  explosion_mask.bm  game.plt  hud_bg.bm  loading.plt  silkscreen5.fnt  silohighlight.bm  silohighlight.msk  silohighlight_mask.bm  softiron.plt  sprites.plt  tiles.bm  tiles_rs.bm  turrettest.bm
data/bunker/: clouds.bm  clouds.msk  dirt.msk  hangar.bm  hangar.msk  lamp.bm  lamp.msk  platform.bm  platform.msk  surface.bm  surface.msk  vehicles.msk  vehicles_brown.bm  vehicles_green.bm
data/hud/: blank.bm  driving.bm  selecting.bm
data/loading/: chopper.bm  jeep.bm  tank.bm
data/maps/: fubar.json  min.json  single_turret.json  snafu.json  snafu.txt  test.txt  test2025.txt  turrets.txt  turretsFull.txt
data/menu/: logo.bm
data/projectiles/: bullet.bm  bullet.msk  bullet_mask.bm  cannon.bm  cannon.msk
data/vehicles/: bunkering_red.bm  jeep.bm  jeep.msk  jeep_green.bm  surfacing_green.bm  tank.bm  tank.msk  tank_brown.bm  tank_brown.msk  tank_turret_brown.bm  tank_turret_brown.msk  tank_turret_green.bm  tank_turret_green.msk  tankturret.bm  tankturret.msk  turret.bm  turret_brown.bm  turret_brown.msk  turret_brown_16.bm  turret_brown_16.msk  turret_none.msk  vehiclecollisions.txt  vehicles.txt
data/vehicles/blue/: tank_turret.msk
data/vehicles/chopper/: aux_blue.bm  aux_mask.bm  main_blue.bm  main_mask.bm
data/vehicles/jeep/: main_blue.bm  main_mask.bm  main_red.bm
data/vehicles/red/: bunkering.bm  tank.msk  tank_turret.bm  tank_turret.msk
data/vehicles/tank/: aux_blue.bm  aux_mask.bm  main_blue.bm  main_mask.bm  main_red.bm
data/vehicles/turret/: turret_blue.bm  turret_gray.bm  turret_mask.bm  turret_red.bm
src/: adler32.c  adler32.h  cache.c  cache.h  config.c  config.h  cursor.c  cursor.h  input.c  input.h  json.c  json.h  main.c  main.h  map.c  map.h  mapjson.c  mapjson.h  open_fire.c  open_fire.h  vehicletypes.c  vehicletypes.h
src/gamestates/game/: ai.c  ai.h  bob.c  bob.h  bob_new.c  bob_new.h  building.c  building.h  bunker.c  bunker.h  console.c  console.h  control.c  control.h  cursor.c  cursor.h  data.c  data.h  explosions.c  explosions.h  game.c  game.h  gamemath.c  gamemath.h  hud.c  hud.h  map.c  map.h  mapjson.c  mapjson.h  player.c  player.h  projectile.c  projectile.h  scoretable.c  scoretable.h  sim.c  sim.h  spawn.c  spawn.h  (+12 more)
src/gamestates/game/ai/: ai.c  ai.h  astar.c  astar.h  bot.c  bot.h  heap.c  heap.h  route.c  route.h
src/gamestates/initloading/: initloading.c  initloading.h  loadingscreen.c  loadingscreen.h  maplist.c  maplist.h  menu.c  worker.c  worker.h
src/gamestates/menu/: button.c  button.h  listctl.c  listctl.h  maplist.c  maplist.h  menu.c  menu.h  minimap.c  minimap.h
src/gamestates/precalc/: precalc.c  precalc.h
